# smart_home_take_home_assignment

./: Readme.md
install/: local_setup.sh  setup.sh
install/dorm_lighting/lib/dorm_lighting/: light_controller
install/dorm_lighting/share/dorm_lighting/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/dorm_lighting/: setup.cfg  setup.py
src/dorm_lighting/dorm_lighting/: light_controller.py  system_clock.py
src/dorm_lighting/test/: test_time.py
