<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>dorm_lighting</name>
  <version>0.0.0</version>

  <description>
    Scheduled smart lighting controller bridging ROS 2 and MQTT for NTU dorm rooms.
  </description>

  <maintainer email="luckyisland3710@gmail.com">
    Lee Sungmin
  </maintainer>

  <license>MIT</license>

  <!-- ROS dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- MQTT -->
  <exec_depend>python3-paho-mqtt</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
